--- a/src/popup.html
+++ b/src/popup.html
@@ -5,13 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TabTamer</title>
   <style>
-    body {
-      width: 400px;
-      height: 600px;
-      margin: 0;
-      padding: 0;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+    html, body {
+      width: 720px;
     }
+    body {
+      margin: 0;
+      border-radius: 10px;
+      background: transparent;
+    }
+    #app { height: 100%; }
   </style>
 </head>
 <body>
